// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`org/parser affiliated keyword dual keywords 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 30
children:
  - type: "section"
    contentsBegin: 1
    contentsEnd: 30
    children:
      - type: "fixed-width"
        affiliated:
          RESULTS:
            - ""
            - "A"
        value: "Hello, world!"
`;

exports[`org/parser affiliated keyword keyword renaming 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 36
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 36
    children:
      - type: "src-block"
        affiliated:
          NAME: "hi"
        value: ""
`;

exports[`org/parser affiliated keyword multiple keywords 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 36
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 36
    children:
      - type: "paragraph"
        affiliated:
          NAME: "name"
          CAPTION:
            - - type: "text"
                value: "hi\\n"
        contentsBegin: 27
        contentsEnd: 36
        children:
          - type: "text"
            value: "paragraph"
`;

exports[`org/parser affiliated keyword multiple same keywords 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 78
children:
  - type: "section"
    contentsBegin: 1
    contentsEnd: 78
    children:
      - type: "paragraph"
        affiliated:
          NAME: "name2"
          CAPTION:
            - - type: "text"
                value: "caption1\\n"
            - - type: "text"
                value: "caption2\\n"
        contentsBegin: 69
        contentsEnd: 78
        children:
          - type: "text"
            value: "paragraph"
`;

exports[`org/parser affiliated keyword name 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 55
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 55
    children:
      - type: "src-block"
        affiliated:
          NAME: "source"
        language: "org"
        value: "some paragraph\\n"
`;

exports[`org/parser affiliated keyword parsed keywords 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 34
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 34
    children:
      - type: "paragraph"
        affiliated:
          CAPTION:
            - - type: "text"
                value: "hello "
              - type: "bold"
                contentsBegin: 18
                contentsEnd: 23
                children:
                  - type: "text"
                    value: "world"
        contentsBegin: 25
        contentsEnd: 34
        children:
          - type: "text"
            value: "paragraph"
`;

exports[`org/parser blocks center block 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 33
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 33
    children:
      - type: "center-block"
        affiliated: {}
        contentsBegin: 15
        contentsEnd: 21
        children:
          - type: "paragraph"
            affiliated: {}
            contentsBegin: 15
            contentsEnd: 21
            children:
              - type: "text"
                value: "hello\\n"
`;

exports[`org/parser blocks comment block 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 35
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 35
    children:
      - type: "comment-block"
        affiliated: {}
        value: "hello\\n"
`;

exports[`org/parser blocks escaper in src block 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 32
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 32
    children:
      - type: "src-block"
        affiliated: {}
        language: "c"
        value: "a = 0;\\n"
`;

exports[`org/parser blocks example block 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 32
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 32
    children:
      - type: "example-block"
        affiliated: {}
        value: "hi\\n"
`;

exports[`org/parser blocks export block 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 30
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 30
    children:
      - type: "export-block"
        affiliated: {}
        backend: null
        value: "hi\\n"
`;

exports[`org/parser blocks export block with backend 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 35
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 35
    children:
      - type: "export-block"
        affiliated: {}
        backend: "html"
        value: "hi\\n"
`;

exports[`org/parser blocks incomplete block after paragraph 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 28
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 28
    children:
      - type: "paragraph"
        affiliated: {}
        contentsBegin: 0
        contentsEnd: 28
        children:
          - type: "text"
            value: "hello\\n#+begin_src\\nnot a code"
`;

exports[`org/parser blocks quote block 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 31
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 31
    children:
      - type: "quote-block"
        affiliated: {}
        contentsBegin: 14
        contentsEnd: 20
        children:
          - type: "paragraph"
            affiliated: {}
            contentsBegin: 14
            contentsEnd: 20
            children:
              - type: "text"
                value: "hello\\n"
`;

exports[`org/parser blocks special block 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 29
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 29
    children:
      - type: "special-block"
        affiliated: {}
        blockType: "blah"
        contentsBegin: 13
        contentsEnd: 19
        children:
          - type: "paragraph"
            affiliated: {}
            contentsBegin: 13
            contentsEnd: 19
            children:
              - type: "text"
                value: "hello\\n"
`;

exports[`org/parser blocks src block 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 27
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 27
    children:
      - type: "src-block"
        affiliated: {}
        value: "hello\\n"
`;

exports[`org/parser blocks src in list 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 44
children:
  - type: "section"
    contentsBegin: 1
    contentsEnd: 44
    children:
      - type: "plain-list"
        affiliated: {}
        indent: 0
        listType: "unordered"
        contentsBegin: 1
        contentsEnd: 44
        structure:
          - begin: 1
            indent: 0
            bullet: "- "
            counter: null
            checkbox: null
            tag: null
            end: 44
        children:
          - type: "item"
            indent: 0
            bullet: "- "
            checkbox: null
            tag: null
            contentsBegin: 3
            contentsEnd: 44
            children:
              - type: "paragraph"
                affiliated: {}
                contentsBegin: 3
                contentsEnd: 12
                children:
                  - type: "text"
                    value: "example:\\n"
              - type: "src-block"
                affiliated: {}
                value: "  blah\\n"
`;

exports[`org/parser blocks verse block 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 121
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 121
    children:
      - type: "verse-block"
        affiliated: {}
        contentsBegin: 14
        contentsEnd: 110
        children:
          - type: "text"
            value: " Great clouds overhead

              \\ Tiny black birds rise and fall

              \\ Snow covers Emacs


              \\    ---AlexSchroeder\\n"
`;

exports[`org/parser clock clock in progress 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 29
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 29
    children:
      - type: "clock"
        value:
          type: "timestamp"
          timestampType: "inactive"
          rawValue: "[2021-01-10 Sun 14:36]"
          start:
            year: 2021
            month: 1
            day: 10
            hour: 14
            minute: 36
          end: null
        duration: null
        status: "running"
`;

exports[`org/parser clock finished clock 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 62
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 62
    children:
      - type: "clock"
        value:
          type: "timestamp"
          timestampType: "inactive-range"
          rawValue: "[2020-12-22 Tue 09:07]--[2020-12-22 Tue 11:10]"
          start:
            year: 2020
            month: 12
            day: 22
            hour: 9
            minute: 7
          end:
            year: 2020
            month: 12
            day: 22
            hour: 11
            minute: 10
        duration: "2:03"
        status: "closed"
`;

exports[`org/parser comments empty comment 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 1
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 1
    children:
      - type: "comment"
        value: ""
`;

exports[`org/parser comments multi-line comment 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 60
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 60
    children:
      - type: "comment"
        value: "first line\\nsecond\\nthird\\nfourth"
`;

exports[`org/parser comments single-line comment 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 17
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 17
    children:
      - type: "comment"
        value: "this is comment"
`;

exports[`org/parser custom drawer 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 30
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 30
    children:
      - type: "drawer"
        affiliated: {}
        name: "MYDRAWER"
        contentsBegin: 11
        contentsEnd: 25
        children:
          - type: "paragraph"
            affiliated: {}
            contentsBegin: 11
            contentsEnd: 25
            children:
              - type: "text"
                value: "hello "
              - type: "italic"
                contentsBegin: 18
                contentsEnd: 23
                children:
                  - type: "text"
                    value: "there"
`;

exports[`org/parser dual keyword inside paragraph 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 33
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 33
    children:
      - type: "paragraph"
        affiliated: {}
        contentsBegin: 0
        contentsEnd: 39
        children:
          - type: "text"
            value: "hello\\n#+RESULTS[hi]: hello\\nthere\\n"
`;

exports[`org/parser emphasis marks C++ accidental strike-through 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 12
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 12
    children:
      - type: "paragraph"
        affiliated: {}
        contentsBegin: 0
        contentsEnd: 12
        children:
          - type: "text"
            value: "C++ blah C++"
`;

exports[`org/parser emphasis marks bold 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 7
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 7
    children:
      - type: "paragraph"
        affiliated: {}
        contentsBegin: 0
        contentsEnd: 7
        children:
          - type: "bold"
            contentsBegin: 1
            contentsEnd: 6
            children:
              - type: "text"
                value: "hello"
`;

exports[`org/parser emphasis marks emphasis 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 49
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 49
    children:
      - type: "paragraph"
        affiliated: {}
        contentsBegin: 0
        contentsEnd: 49
        children:
          - type: "italic"
            contentsBegin: 1
            contentsEnd: 9
            children:
              - type: "text"
                value: "Consider"
          - type: "text"
            value: " "
          - type: "code"
            value: "t*h*e"
            children: []
          - type: "text"
            value: " "
          - type: "bold"
            contentsBegin: 20
            contentsEnd: 29
            children:
              - type: "text"
                value: "following"
          - type: "text"
            value: " "
          - type: "verbatim"
            value: "example"
            children: []
          - type: "text"
            value: " "
          - type: "strike-through"
            contentsBegin: 42
            contentsEnd: 48
            children:
              - type: "text"
                value: "strike"
`;

exports[`org/parser emphasis marks emphasis boundaries 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 29
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 29
    children:
      - type: "paragraph"
        affiliated: {}
        contentsBegin: 0
        contentsEnd: 29
        children:
          - type: "text"
            value: "a/a/ b*b* c~c~ d=d= e+e+ f_f_"
`;

exports[`org/parser emphasis marks hanging / 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 13
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 13
    children:
      - type: "plain-list"
        affiliated: {}
        indent: 0
        listType: "unordered"
        contentsBegin: 0
        contentsEnd: 13
        structure:
          - begin: 0
            indent: 0
            bullet: "- "
            counter: null
            checkbox: null
            tag: null
            end: 13
        children:
          - type: "item"
            indent: 0
            bullet: "- "
            checkbox: null
            tag: null
            contentsBegin: 2
            contentsEnd: 13
            children:
              - type: "paragraph"
                affiliated: {}
                contentsBegin: 2
                contentsEnd: 13
                children:
                  - type: "text"
                    value: "hello/other"
`;

exports[`org/parser empty document 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 0
children: []
`;

exports[`org/parser fixed-width empty fixed-width 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 1
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 1
    children:
      - type: "fixed-width"
        affiliated: {}
        value: ""
`;

exports[`org/parser fixed-width multi-line fixed-width 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 17
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 17
    children:
      - type: "fixed-width"
        affiliated: {}
        value: "hello\\n  world"
`;

exports[`org/parser fixed-width single-line fixed-width 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 7
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 7
    children:
      - type: "fixed-width"
        affiliated: {}
        value: "hello"
`;

exports[`org/parser headline complex headline 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 55
children:
  - type: "headline"
    level: 1
    todoKeyword: "TODO"
    priority: "A"
    commented: true
    rawValue: "headline /italic/ title"
    title:
      - type: "text"
        value: "headline "
      - type: "italic"
        contentsBegin: 30
        contentsEnd: 36
        children:
          - type: "text"
            value: "italic"
      - type: "text"
        value: " title"
    tags:
      - "some"
      - "tags"
    contentsBegin: 55
    contentsEnd: 55
    children: []
`;

exports[`org/parser headline multiple headlines 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 22
children:
  - type: "headline"
    level: 1
    todoKeyword: null
    priority: null
    commented: false
    rawValue: "Hello"
    title:
      - type: "text"
        value: "Hello"
    tags: []
    contentsBegin: 8
    contentsEnd: 8
    children: []
  - type: "headline"
    level: 1
    todoKeyword: null
    priority: null
    commented: false
    rawValue: "World"
    title:
      - type: "text"
        value: "World"
    tags: []
    contentsBegin: 16
    contentsEnd: 16
    children: []
  - type: "headline"
    level: 1
    todoKeyword: null
    priority: null
    commented: false
    rawValue: "blah"
    title:
      - type: "text"
        value: "blah"
    tags: []
    contentsBegin: 22
    contentsEnd: 22
    children: []
`;

exports[`org/parser headline nested headlines 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 36
children:
  - type: "headline"
    level: 1
    todoKeyword: null
    priority: null
    commented: false
    rawValue: "hi"
    title:
      - type: "text"
        value: "hi"
    tags: []
    contentsBegin: 5
    contentsEnd: 22
    children:
      - type: "headline"
        level: 2
        todoKeyword: null
        priority: null
        commented: false
        rawValue: "there"
        title:
          - type: "text"
            value: "there"
        tags: []
        contentsBegin: 14
        contentsEnd: 22
        children:
          - type: "headline"
            level: 3
            todoKeyword: null
            priority: null
            commented: false
            rawValue: "how"
            title:
              - type: "text"
                value: "how"
            tags: []
            contentsBegin: 22
            contentsEnd: 22
            children: []
  - type: "headline"
    level: 1
    todoKeyword: null
    priority: null
    commented: false
    rawValue: "are"
    title:
      - type: "text"
        value: "are"
    tags: []
    contentsBegin: 28
    contentsEnd: 36
    children:
      - type: "headline"
        level: 3
        todoKeyword: null
        priority: null
        commented: false
        rawValue: "you"
        title:
          - type: "text"
            value: "you"
        tags: []
        contentsBegin: 36
        contentsEnd: 36
        children: []
`;

exports[`org/parser headline single headline 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 7
children:
  - type: "headline"
    level: 1
    todoKeyword: null
    priority: null
    commented: false
    rawValue: "Hello"
    title:
      - type: "text"
        value: "Hello"
    tags: []
    contentsBegin: 7
    contentsEnd: 7
    children: []
`;

exports[`org/parser incomplete drawer after paragraph 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 24
children:
  - type: "section"
    contentsBegin: 1
    contentsEnd: 24
    children:
      - type: "paragraph"
        affiliated: {}
        contentsBegin: 1
        contentsEnd: 24
        children:
          - type: "text"
            value: "hello\\n:NONDRAWER:\\nhello"
`;

exports[`org/parser keyword 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 11
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 11
    children:
      - type: "keyword"
        affiliated: {}
        key: "TITLE"
        value: "hi"
`;

exports[`org/parser latex environment incomplete latex environment after paragraph (two lines) 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 41
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 41
    children:
      - type: "paragraph"
        affiliated: {}
        contentsBegin: 0
        contentsEnd: 41
        children:
          - type: "text"
            value: "hello

              there

              \\\\begin{hello}

              I am incomplete"
`;

exports[`org/parser latex environment incomplete latex environment after paragraph 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 35
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 35
    children:
      - type: "paragraph"
        affiliated: {}
        contentsBegin: 0
        contentsEnd: 35
        children:
          - type: "text"
            value: "hello

              \\\\begin{hello}

              I am incomplete"
`;

exports[`org/parser latex environment latex environment after paragraph 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 37
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 37
    children:
      - type: "paragraph"
        affiliated: {}
        contentsBegin: 0
        contentsEnd: 6
        children:
          - type: "text"
            value: "hello\\n"
      - type: "latex-environment"
        affiliated: {}
        value: "\\\\begin{hello} there \\\\end{hello}"
`;

exports[`org/parser latex environment multi-line 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 35
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 35
    children:
      - type: "latex-environment"
        affiliated: {}
        value: "\\\\begin{hello}

          some text

          \\\\end{hello}"
`;

exports[`org/parser links link 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 18
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 18
    children:
      - type: "paragraph"
        affiliated: {}
        contentsBegin: 0
        contentsEnd: 18
        children:
          - type: "link"
            format: "plain"
            linkType: "http"
            rawLink: "http://example.com"
            path: "//example.com"
            children: []
`;

exports[`org/parser links link after text 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 24
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 24
    children:
      - type: "paragraph"
        affiliated: {}
        contentsBegin: 0
        contentsEnd: 24
        children:
          - type: "text"
            value: "some text "
          - type: "link"
            format: "bracket"
            linkType: "fuzzy"
            rawLink: "link"
            path: "link"
            contentsBegin: 18
            contentsEnd: 22
            children:
              - type: "text"
                value: "text"
`;

exports[`org/parser links link mixed with text 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 29
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 29
    children:
      - type: "paragraph"
        affiliated: {}
        contentsBegin: 0
        contentsEnd: 29
        children:
          - type: "text"
            value: "hello "
          - type: "link"
            format: "plain"
            linkType: "http"
            rawLink: "http://example.com"
            path: "//example.com"
            children: []
          - type: "text"
            value: " blah"
`;

exports[`org/parser links link with no text 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 8
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 8
    children:
      - type: "paragraph"
        affiliated: {}
        contentsBegin: 0
        contentsEnd: 8
        children:
          - type: "link"
            format: "bracket"
            linkType: "fuzzy"
            rawLink: "link"
            path: "link"
            children: []
`;

exports[`org/parser links plain link does not include trailing punctuation 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 28
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 28
    children:
      - type: "paragraph"
        affiliated: {}
        contentsBegin: 0
        contentsEnd: 28
        children:
          - type: "text"
            value: "Example: "
          - type: "link"
            format: "plain"
            linkType: "http"
            rawLink: "http://example.com"
            path: "//example.com"
            children: []
          - type: "text"
            value: "."
`;

exports[`org/parser links regular link 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 14
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 14
    children:
      - type: "paragraph"
        affiliated: {}
        contentsBegin: 0
        contentsEnd: 14
        children:
          - type: "link"
            format: "bracket"
            linkType: "fuzzy"
            rawLink: "link"
            path: "link"
            contentsBegin: 8
            contentsEnd: 12
            children:
              - type: "text"
                value: "text"
`;

exports[`org/parser links regular link with longer link slash 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 18
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 18
    children:
      - type: "paragraph"
        affiliated: {}
        contentsBegin: 0
        contentsEnd: 18
        children:
          - type: "link"
            format: "bracket"
            linkType: "fuzzy"
            rawLink: "longlink"
            path: "longlink"
            contentsBegin: 12
            contentsEnd: 16
            children:
              - type: "text"
                value: "text"
`;

exports[`org/parser links two links in one line 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 34
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 34
    children:
      - type: "paragraph"
        affiliated: {}
        contentsBegin: 0
        contentsEnd: 34
        children:
          - type: "link"
            format: "bracket"
            linkType: "fuzzy"
            rawLink: "link1"
            path: "link1"
            contentsBegin: 9
            contentsEnd: 14
            children:
              - type: "text"
                value: "text1"
          - type: "text"
            value: " "
          - type: "link"
            format: "bracket"
            linkType: "fuzzy"
            rawLink: "link2"
            path: "link2"
            contentsBegin: 26
            contentsEnd: 31
            children:
              - type: "text"
                value: "text2"
`;

exports[`org/parser list empty line between list items 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 18
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 18
    children:
      - type: "plain-list"
        affiliated: {}
        indent: 0
        listType: "unordered"
        contentsBegin: 0
        contentsEnd: 18
        structure:
          - begin: 0
            indent: 0
            bullet: "- "
            counter: null
            checkbox: null
            tag: null
            end: 10
          - begin: 10
            indent: 0
            bullet: "- "
            counter: null
            checkbox: null
            tag: null
            end: 18
        children:
          - type: "item"
            indent: 0
            bullet: "- "
            checkbox: null
            tag: null
            contentsBegin: 2
            contentsEnd: 10
            children:
              - type: "paragraph"
                affiliated: {}
                contentsBegin: 2
                contentsEnd: 9
                children:
                  - type: "text"
                    value: "item 1\\n"
          - type: "item"
            indent: 0
            bullet: "- "
            checkbox: null
            tag: null
            contentsBegin: 12
            contentsEnd: 18
            children:
              - type: "paragraph"
                affiliated: {}
                contentsBegin: 12
                contentsEnd: 18
                children:
                  - type: "text"
                    value: "item 2"
`;

exports[`org/parser list fake list numbers 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 9
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 9
    children:
      - type: "plain-list"
        affiliated: {}
        indent: 0
        listType: "unordered"
        contentsBegin: 0
        contentsEnd: 9
        structure:
          - begin: 0
            indent: 0
            bullet: "- "
            counter: null
            checkbox: null
            tag: null
            end: 9
        children:
          - type: "item"
            indent: 0
            bullet: "- "
            checkbox: null
            tag: null
            contentsBegin: 2
            contentsEnd: 9
            children:
              - type: "paragraph"
                affiliated: {}
                contentsBegin: 2
                contentsEnd: 9
                children:
                  - type: "text"
                    value: "1. blah"
`;

exports[`org/parser list list after paragraph 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 12
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 12
    children:
      - type: "paragraph"
        affiliated: {}
        contentsBegin: 0
        contentsEnd: 6
        children:
          - type: "text"
            value: "hello\\n"
      - type: "plain-list"
        affiliated: {}
        indent: 0
        listType: "unordered"
        contentsBegin: 6
        contentsEnd: 12
        structure:
          - begin: 6
            indent: 0
            bullet: "- "
            counter: null
            checkbox: null
            tag: null
            end: 12
        children:
          - type: "item"
            indent: 0
            bullet: "- "
            checkbox: null
            tag: null
            contentsBegin: 8
            contentsEnd: 12
            children:
              - type: "paragraph"
                affiliated: {}
                contentsBegin: 8
                contentsEnd: 12
                children:
                  - type: "text"
                    value: "list"
`;

exports[`org/parser list nested lists 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 27
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 27
    children:
      - type: "plain-list"
        affiliated: {}
        indent: 0
        listType: "unordered"
        contentsBegin: 0
        contentsEnd: 27
        structure:
          &a1
          - begin: 0
            indent: 0
            bullet: "- "
            counter: null
            checkbox: null
            tag: null
            end: 27
          - begin: 8
            indent: 2
            bullet: "- "
            counter: null
            checkbox: null
            tag: null
            end: 19
          - begin: 19
            indent: 2
            bullet: "- "
            counter: null
            checkbox: null
            tag: null
            end: 27
        children:
          - type: "item"
            indent: 0
            bullet: "- "
            checkbox: null
            tag: null
            contentsBegin: 2
            contentsEnd: 27
            children:
              - type: "paragraph"
                affiliated: {}
                contentsBegin: 2
                contentsEnd: 8
                children:
                  - type: "text"
                    value: "there\\n"
              - type: "plain-list"
                affiliated: {}
                indent: 2
                listType: "unordered"
                contentsBegin: 8
                contentsEnd: 27
                structure: *a1
                children:
                  - type: "item"
                    indent: 2
                    bullet: "- "
                    checkbox: null
                    tag: null
                    contentsBegin: 12
                    contentsEnd: 19
                    children:
                      - type: "paragraph"
                        affiliated: {}
                        contentsBegin: 12
                        contentsEnd: 19
                        children:
                          - type: "text"
                            value: "nested\\n"
                  - type: "item"
                    indent: 2
                    bullet: "- "
                    checkbox: null
                    tag: null
                    contentsBegin: 23
                    contentsEnd: 27
                    children:
                      - type: "paragraph"
                        affiliated: {}
                        contentsBegin: 23
                        contentsEnd: 27
                        children:
                          - type: "text"
                            value: "list"
`;

exports[`org/parser list ordered list 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 13
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 13
    children:
      - type: "plain-list"
        affiliated: {}
        indent: 0
        listType: "ordered"
        contentsBegin: 0
        contentsEnd: 13
        structure:
          - begin: 0
            indent: 0
            bullet: "1. "
            counter: null
            checkbox: null
            tag: null
            end: 7
          - begin: 7
            indent: 0
            bullet: "2. "
            counter: null
            checkbox: null
            tag: null
            end: 13
        children:
          - type: "item"
            indent: 0
            bullet: "1. "
            checkbox: null
            tag: null
            contentsBegin: 3
            contentsEnd: 7
            children:
              - type: "paragraph"
                affiliated: {}
                contentsBegin: 3
                contentsEnd: 7
                children:
                  - type: "text"
                    value: "one\\n"
          - type: "item"
            indent: 0
            bullet: "2. "
            checkbox: null
            tag: null
            contentsBegin: 10
            contentsEnd: 13
            children:
              - type: "paragraph"
                affiliated: {}
                contentsBegin: 10
                contentsEnd: 13
                children:
                  - type: "text"
                    value: "two"
`;

exports[`org/parser list single-item list 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 4
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 4
    children:
      - type: "plain-list"
        affiliated: {}
        indent: 0
        listType: "unordered"
        contentsBegin: 0
        contentsEnd: 4
        structure:
          - begin: 0
            indent: 0
            bullet: "- "
            counter: null
            checkbox: null
            tag: null
            end: 4
        children:
          - type: "item"
            indent: 0
            bullet: "- "
            checkbox: null
            tag: null
            contentsBegin: 2
            contentsEnd: 4
            children:
              - type: "paragraph"
                affiliated: {}
                contentsBegin: 2
                contentsEnd: 4
                children:
                  - type: "text"
                    value: "hi"
`;

exports[`org/parser list two empty lines breaking list 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 18
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 18
    children:
      - type: "plain-list"
        affiliated: {}
        indent: 0
        listType: "unordered"
        contentsBegin: 0
        contentsEnd: 10
        structure:
          - begin: 0
            indent: 0
            bullet: "- "
            counter: null
            checkbox: null
            tag: null
            end: 10
        children:
          - type: "item"
            indent: 0
            bullet: "- "
            checkbox: null
            tag: null
            contentsBegin: 2
            contentsEnd: 10
            children:
              - type: "paragraph"
                affiliated: {}
                contentsBegin: 2
                contentsEnd: 8
                children:
                  - type: "text"
                    value: "list1\\n"
      - type: "plain-list"
        affiliated: {}
        indent: 0
        listType: "unordered"
        contentsBegin: 10
        contentsEnd: 18
        structure:
          - begin: 10
            indent: 0
            bullet: "- "
            counter: null
            checkbox: null
            tag: null
            end: 18
        children:
          - type: "item"
            indent: 0
            bullet: "- "
            checkbox: null
            tag: null
            contentsBegin: 12
            contentsEnd: 18
            children:
              - type: "paragraph"
                affiliated: {}
                contentsBegin: 12
                contentsEnd: 18
                children:
                  - type: "text"
                    value: "list 2"
`;

exports[`org/parser list two-item list 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 12
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 12
    children:
      - type: "plain-list"
        affiliated: {}
        indent: 0
        listType: "unordered"
        contentsBegin: 0
        contentsEnd: 12
        structure:
          - begin: 0
            indent: 0
            bullet: "- "
            counter: null
            checkbox: null
            tag: null
            end: 5
          - begin: 5
            indent: 0
            bullet: "- "
            counter: null
            checkbox: null
            tag: null
            end: 12
        children:
          - type: "item"
            indent: 0
            bullet: "- "
            checkbox: null
            tag: null
            contentsBegin: 2
            contentsEnd: 5
            children:
              - type: "paragraph"
                affiliated: {}
                contentsBegin: 2
                contentsEnd: 5
                children:
                  - type: "text"
                    value: "hi\\n"
          - type: "item"
            indent: 0
            bullet: "- "
            checkbox: null
            tag: null
            contentsBegin: 7
            contentsEnd: 12
            children:
              - type: "paragraph"
                affiliated: {}
                contentsBegin: 7
                contentsEnd: 12
                children:
                  - type: "text"
                    value: "there"
`;

exports[`org/parser non-dual keyword inside paragraph 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 25
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 25
    children:
      - type: "paragraph"
        affiliated: {}
        contentsBegin: 0
        contentsEnd: 28
        children:
          - type: "text"
            value: "hello\\n#+BLAH[hi]: heh\\nhi\\n"
`;

exports[`org/parser planning 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 96
children:
  - type: "headline"
    level: 1
    todoKeyword: null
    priority: null
    commented: false
    rawValue: "headline"
    title:
      - type: "text"
        value: "headline"
    tags: []
    contentsBegin: 11
    contentsEnd: 96
    children:
      - type: "section"
        contentsBegin: 11
        contentsEnd: 96
        children:
          - type: "planning"
            scheduled:
              type: "timestamp"
              timestampType: "inactive"
              rawValue: "[2019-03-13 Wed]"
              start:
                year: 2019
                month: 3
                day: 13
                hour: null
                minute: null
              end: null
            deadline:
              type: "timestamp"
              timestampType: "inactive"
              rawValue: "[2019-03-14 Thu]"
              start:
                year: 2019
                month: 3
                day: 14
                hour: null
                minute: null
              end: null
            closed:
              type: "timestamp"
              timestampType: "inactive"
              rawValue: "[2019-03-13 Wed 23:48]"
              start:
                year: 2019
                month: 3
                day: 13
                hour: 23
                minute: 48
              end: null
`;

exports[`org/parser property drawer + section 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 68
children:
  - type: "headline"
    level: 1
    todoKeyword: null
    priority: null
    commented: false
    rawValue: "headline"
    title:
      - type: "text"
        value: "headline"
    tags: []
    contentsBegin: 11
    contentsEnd: 68
    children:
      - type: "section"
        contentsBegin: 11
        contentsEnd: 68
        children:
          - type: "property-drawer"
            contentsBegin: 24
            contentsEnd: 57
            children:
              - type: "node-property"
                key: "CREATED"
                value: "[2019-03-13 Wed 23:57]"
          - type: "paragraph"
            affiliated: {}
            contentsBegin: 63
            contentsEnd: 68
            children:
              - type: "text"
                value: "hello"
`;

exports[`org/parser property drawer 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 62
children:
  - type: "headline"
    level: 1
    todoKeyword: null
    priority: null
    commented: false
    rawValue: "headline"
    title:
      - type: "text"
        value: "headline"
    tags: []
    contentsBegin: 11
    contentsEnd: 62
    children:
      - type: "section"
        contentsBegin: 11
        contentsEnd: 62
        children:
          - type: "property-drawer"
            contentsBegin: 24
            contentsEnd: 57
            children:
              - type: "node-property"
                key: "CREATED"
                value: "[2019-03-13 Wed 23:57]"
`;

exports[`org/parser section empty lines before first section 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 4
children:
  - type: "section"
    contentsBegin: 2
    contentsEnd: 4
    children:
      - type: "paragraph"
        affiliated: {}
        contentsBegin: 2
        contentsEnd: 4
        children:
          - type: "text"
            value: "hi"
`;

exports[`org/parser section initial section 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 10
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 6
    children:
      - type: "paragraph"
        affiliated: {}
        contentsBegin: 0
        contentsEnd: 6
        children:
          - type: "text"
            value: "hello\\n"
  - type: "headline"
    level: 1
    todoKeyword: null
    priority: null
    commented: false
    rawValue: "hi"
    title:
      - type: "text"
        value: "hi"
    tags: []
    contentsBegin: 10
    contentsEnd: 10
    children: []
`;

exports[`org/parser section section in headline 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 23
children:
  - type: "headline"
    level: 1
    todoKeyword: null
    priority: null
    commented: false
    rawValue: "hello"
    title:
      - type: "text"
        value: "hello"
    tags: []
    contentsBegin: 8
    contentsEnd: 23
    children:
      - type: "section"
        contentsBegin: 8
        contentsEnd: 23
        children:
          - type: "paragraph"
            affiliated: {}
            contentsBegin: 8
            contentsEnd: 23
            children:
              - type: "text"
                value: "this is section"
`;

exports[`org/parser section single-line section 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 2
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 2
    children:
      - type: "paragraph"
        affiliated: {}
        contentsBegin: 0
        contentsEnd: 2
        children:
          - type: "text"
            value: "hi"
`;

exports[`org/parser table 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 59
children:
  - type: "section"
    contentsBegin: 1
    contentsEnd: 59
    children:
      - type: "table"
        tableType: "org"
        tblfm: ""
        contentsBegin: 1
        contentsEnd: 59
        children:
          - type: "table-row"
            rowType: "standard"
            contentsBegin: 2
            contentsEnd: 19
            children:
              - type: "table-cell"
                contentsBegin: 3
                contentsEnd: 8
                children:
                  - type: "text"
                    value: "head1"
              - type: "table-cell"
                contentsBegin: 12
                contentsEnd: 17
                children:
                  - type: "text"
                    value: "head2"
          - type: "table-row"
            rowType: "rule"
            contentsBegin: 21
            contentsEnd: 21
            children: []
          - type: "table-row"
            rowType: "standard"
            contentsBegin: 40
            contentsEnd: 58
            children:
              - type: "table-cell"
                contentsBegin: 41
                contentsEnd: 47
                children:
                  - type: "text"
                    value: "value1"
              - type: "table-cell"
                contentsBegin: 50
                contentsEnd: 56
                children:
                  - type: "text"
                    value: "value2"
`;

exports[`org/parser timestamps active 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 16
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 16
    children:
      - type: "paragraph"
        affiliated: {}
        contentsBegin: 0
        contentsEnd: 16
        children:
          - type: "timestamp"
            timestampType: "active"
            rawValue: "<2021-01-07 Thu>"
            start:
              year: 2021
              month: 1
              day: 7
              hour: null
              minute: null
            end: null
`;

exports[`org/parser timestamps active-range 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 34
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 34
    children:
      - type: "paragraph"
        affiliated: {}
        contentsBegin: 0
        contentsEnd: 34
        children:
          - type: "timestamp"
            timestampType: "active-range"
            rawValue: "<2021-01-07 Thu>--<2021-01-09 Sat>"
            start:
              year: 2021
              month: 1
              day: 7
              hour: null
              minute: null
            end:
              year: 2021
              month: 1
              day: 9
              hour: null
              minute: null
`;

exports[`org/parser timestamps inactive 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 16
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 16
    children:
      - type: "paragraph"
        affiliated: {}
        contentsBegin: 0
        contentsEnd: 16
        children:
          - type: "timestamp"
            timestampType: "inactive"
            rawValue: "[2021-01-07 Thu]"
            start:
              year: 2021
              month: 1
              day: 7
              hour: null
              minute: null
            end: null
`;

exports[`org/parser timestamps inactive-range 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 34
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 34
    children:
      - type: "paragraph"
        affiliated: {}
        contentsBegin: 0
        contentsEnd: 34
        children:
          - type: "timestamp"
            timestampType: "inactive-range"
            rawValue: "[2021-01-07 Thu]--[2021-01-08 Fri]"
            start:
              year: 2021
              month: 1
              day: 7
              hour: null
              minute: null
            end:
              year: 2021
              month: 1
              day: 8
              hour: null
              minute: null
`;

exports[`org/parser timestamps time range 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 28
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 28
    children:
      - type: "paragraph"
        affiliated: {}
        contentsBegin: 0
        contentsEnd: 28
        children:
          - type: "timestamp"
            timestampType: "inactive-range"
            rawValue: "[2021-01-07 Thu 19:36-20:38]"
            start:
              year: 2021
              month: 1
              day: 7
              hour: 19
              minute: 36
            end:
              year: 2021
              month: 1
              day: 7
              hour: 20
              minute: 38
`;

exports[`org/parser timestamps with time 1`] = `
type: "org-data"
contentsBegin: 0
contentsEnd: 22
children:
  - type: "section"
    contentsBegin: 0
    contentsEnd: 22
    children:
      - type: "paragraph"
        affiliated: {}
        contentsBegin: 0
        contentsEnd: 22
        children:
          - type: "timestamp"
            timestampType: "inactive"
            rawValue: "[2021-01-07 Thu 19:36]"
            start:
              year: 2021
              month: 1
              day: 7
              hour: 19
              minute: 36
            end: null
`;
